force-app/main/default/objects/Opportunity/fields/Ability_to_Service_Auto__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Service_Auto__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ability to Service Auto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>