force-app/main/default/objects/Opportunity/fields/Ability_to_ServiceAuto__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_ServiceAuto__c</fullName>
    <label>Ability to ServiceAuto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>