force-app/main/default/objects/Opportunity/fields/Ability_to_ServiceCC__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_ServiceCC__c</fullName>
    <label>Ability to ServiceCC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>