force-app/main/default/objects/Opportunity/fields/Account_Holders__c.field-meta.xml
<CustomField>
    <fullName>Account_Holders__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Account Holders</label>
    <length>40</length>
    <type>Text</type>
</CustomField>