force-app/main/default/objects/Opportunity/fields/Account_Holders_LOC__c.field-meta.xml
<CustomField>
    <fullName>Account_Holders_LOC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Holders LOC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>