force-app/main/default/objects/Opportunity/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <label>Account No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>