force-app/main/default/objects/Opportunity/fields/Additional_Information_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Information Required</label>
    <type>Checkbox</type>
</CustomField>