force-app/main/default/objects/Opportunity/fields/Adjudication_Decision__c.field-meta.xml
<CustomField>
    <fullName>Adjudication_Decision__c</fullName>
    <label>Adjudication Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>