force-app/main/default/objects/Opportunity/fields/Allocation_App_1_Auto_Loan_MP__c.field-meta.xml
<CustomField>
    <fullName>Allocation_App_1_Auto_Loan_MP__c</fullName>
    <description>Allocation Applicant 1 Auto Loan Amount %</description>
    <label>Allocation App 1 Auto Loan MP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>