force-app/main/default/objects/Opportunity/fields/Allocation_App_1_Auto_Loan_MPC__c.field-meta.xml
<CustomField>
    <fullName>Allocation_App_1_Auto_Loan_MPC__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Allocation App 1 Auto Loan MP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>