force-app/main/default/objects/Opportunity/fields/Allocation_Applicant_1_Auto_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Applicant_1_Auto_Loan_Amount__c</fullName>
    <label>Allocation Applicant 1 Auto Loan Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>