force-app/main/default/objects/Opportunity/fields/Amend_Application_Document_PK__c.field-meta.xml
<CustomField>
    <fullName>Amend_Application_Document_PK__c</fullName>
    <label>Amend Application Documents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>