force-app/main/default/objects/Opportunity/fields/Annual_Interest_Rate_on_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Annual_Interest_Rate_on_Credit_Card__c</fullName>
    <label>Annual Interest Rate on Credit Card</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>