force-app/main/default/objects/Opportunity/fields/Annual_Interest_Rate_on_LOC__c.field-meta.xml
<CustomField>
    <fullName>Annual_Interest_Rate_on_LOC__c</fullName>
    <label>Annual Interest Rate on LOC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>