force-app/main/default/objects/Opportunity/fields/Annual_Premium_Rate__c.field-meta.xml
<CustomField>
    <fullName>Annual_Premium_Rate__c</fullName>
    <label>Annual Premium Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>