force-app/main/default/objects/Opportunity/fields/Applicant_2__c.field-meta.xml
<CustomField>
    <fullName>Applicant_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Contact)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>