force-app/main/default/objects/Opportunity/fields/Applicant_3__c.field-meta.xml
<CustomField>
    <fullName>Applicant_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Applicant 3)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>