force-app/main/default/objects/Opportunity/fields/Application_Form_Created_PK__c.field-meta.xml
<CustomField>
    <fullName>Application_Form_Created_PK__c</fullName>
    <label>Application Form Created</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>