force-app/main/default/objects/Opportunity/fields/Application_Referred_Date__c.field-meta.xml
<CustomField>
    <fullName>Application_Referred_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Referred Date</label>
    <type>DateTime</type>
</CustomField>