force-app/main/default/objects/Opportunity/fields/Auto_Loan__c.field-meta.xml
<CustomField>
    <fullName>Auto_Loan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Loan</label>
    <type>Checkbox</type>
</CustomField>