force-app/main/default/objects/Opportunity/fields/Auto_Loan_Phoenix_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Auto_Loan_Phoenix_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auto Loan Phoenix Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>