force-app/main/default/objects/Opportunity/fields/Auto_Loan_Phoenix_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Auto_Loan_Phoenix_Account_Type__c</fullName>
    <label>Auto Loan Phoenix Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phoenix_Account_Type</valueSetName>
    </valueSet>
</CustomField>