force-app/main/default/objects/Opportunity/fields/Auto_Loan_RIM_Client_No__c.field-meta.xml
<CustomField>
    <fullName>Auto_Loan_RIM_Client_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Auto Loan RIM/Client No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>