force-app/main/default/objects/Opportunity/fields/Await_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>Await_Credit_Report__c</fullName>
    <formula
  >IF(  Customer_Consent__c   &gt;= 0, &#39;Received&#39;, &#39;Not Received&#39;)</formula>
    <label>Await Credit Report Deperacatd until OnB</label>
    <type>Text</type>
</CustomField>