force-app/main/default/objects/Opportunity/fields/Await_Credit_Report_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Await_Credit_Report_Picklist__c</fullName>
    <label>Await Credit Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Not Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>