force-app/main/default/objects/Opportunity/fields/Await_Result_of_Sanction_Screen__c.field-meta.xml
<CustomField>
    <fullName>Await_Result_of_Sanction_Screen__c</fullName>
    <label>Await Result of Sanction Screen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Received</fullName>
                <default>true</default>
                <label>Not Received</label>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>