force-app/main/default/objects/Opportunity/fields/Capture_Account_Details_Phoenix__c.field-meta.xml
<CustomField>
    <fullName>Capture_Account_Details_Phoenix__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capture Account Details (Phoenix)</label>
    <type>Checkbox</type>
</CustomField>