force-app/main/default/objects/Opportunity/fields/Card_used_by_other_not_cardholder__c.field-meta.xml
<CustomField>
    <fullName>Card_used_by_other_not_cardholder__c</fullName>
    <label>Card used by other (not cardholder)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yea</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>