force-app/main/default/objects/Opportunity/fields/Close_Lose_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Lose_Reason__c</fullName>
    <label>Close Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer has failed to provide documents</fullName>
            </value>
            <value>
                <fullName>Customer is no longer interested in product</fullName>
            </value>
            <value>
                <fullName>Customer has gone to a competitor</fullName>
            </value>
            <value>
                <fullName>No longer able to reach to customer</fullName>
            </value>
            <value>
                <fullName>Application Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>