force-app/main/default/objects/Opportunity/fields/Closed_Date_calc__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_calc__c</fullName>
    <formula>DATETIMEVALUE( CloseDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed Date (Date/Time)</label>
    <type>DateTime</type>
</CustomField>