force-app/main/default/objects/Opportunity/fields/Collateral__c.field-meta.xml
<CustomField>
    <fullName>Collateral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Auto</label>
    <referenceTo>FinServ__AssetsAndLiabilities__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>