force-app/main/default/objects/Opportunity/fields/Collateral_CC__c.field-meta.xml
<CustomField>
    <fullName>Collateral_CC__c</fullName>
    <label>Collateral CC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>Realestate - Residential</fullName>
            </value>
            <value>
                <fullName>Realestate - Commercial</fullName>
            </value>
            <value>
                <fullName>Motor Vehicle</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>