force-app/main/default/objects/Opportunity/fields/Collateral_Personal_Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Personal_Credit_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Personal Credit Card</label>
    <referenceTo>FinServ__AssetsAndLiabilities__c</referenceTo>
    <relationshipLabel
  >Opportunities (Collateral Personal Credit Card)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>