force-app/main/default/objects/Opportunity/fields/Collateral_Personal_Line_of_Credit__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Personal_Line_of_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Collateral Personal Line of Credit</label>
    <referenceTo>FinServ__AssetsAndLiabilities__c</referenceTo>
    <relationshipLabel
  >Opportunities (Collateral Personal Line of Credit)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>