force-app/main/default/objects/Opportunity/fields/Collect_and_Scan_KYC_documents_OnBase__c.field-meta.xml
<CustomField>
    <fullName>Collect_and_Scan_KYC_documents_OnBase__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collect and Scan KYC documents (OnBase)</label>
    <type>Checkbox</type>
</CustomField>