force-app/main/default/objects/Opportunity/fields/Collect_check_Customer_PK__c.field-meta.xml
<CustomField>
    <fullName>Collect_check_Customer_PK__c</fullName>
    <label>Collect &amp; check Customer Documents</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>