force-app/main/default/objects/Opportunity/fields/Complete_Internal_Review_PK__c.field-meta.xml
<CustomField>
    <fullName>Complete_Internal_Review_PK__c</fullName>
    <label>Complete Internal Review</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>