force-app/main/default/objects/Opportunity/fields/Complete_Sharepoint_Forms_Retail__c.field-meta.xml
<CustomField>
    <fullName>Complete_Sharepoint_Forms_Retail__c</fullName>
    <label>Complete Sharepoint Forms (Retail)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>