force-app/main/default/objects/Opportunity/fields/Conduct_Interview_PK__c.field-meta.xml
<CustomField>
    <fullName>Conduct_Interview_PK__c</fullName>
    <label>Conduct Interview</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>