force-app/main/default/objects/Opportunity/fields/Contact_Customer_PK__c.field-meta.xml
<CustomField>
    <fullName>Contact_Customer_PK__c</fullName>
    <label>Contact Customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contact Made</fullName>
            </value>
            <value>
                <fullName>Contact Not Made</fullName>
            </value>
            <value>
                <fullName>No Contact Made</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>