force-app/main/default/objects/Opportunity/fields/Contact_Customer_Since_Suspension_Memo__c.field-meta.xml
<CustomField>
    <fullName>Contact_Customer_Since_Suspension_Memo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Customer Since Suspension Memo</label>
    <type>DateTime</type>
</CustomField>