force-app/main/default/objects/Opportunity/fields/Contact_Customer_to_Sign_Security_Docs__c.field-meta.xml
<CustomField>
    <fullName>Contact_Customer_to_Sign_Security_Docs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contact Customer to Sign Security Docs</label>
    <type>DateTime</type>
</CustomField>