force-app/main/default/objects/Opportunity/fields/Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Type__c</fullName>
    <description>Life Insurance</description>
    <label>Coverage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Coverage_Type</valueSetName>
    </valueSet>
</CustomField>