force-app/main/default/objects/Opportunity/fields/Credit_Card__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Card</label>
    <type>Checkbox</type>
</CustomField>