force-app/main/default/objects/Opportunity/fields/Credit_Card_Phoenix_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Phoenix_Account_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Card Phoenix Account Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>