force-app/main/default/objects/Opportunity/fields/Credit_Card_Phoenix_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Phoenix_Account_Type__c</fullName>
    <label>Credit Card Phoenix Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Phoenix_Account_Type</valueSetName>
    </valueSet>
</CustomField>