force-app/main/default/objects/Opportunity/fields/Credit_Card_RIM_Client_No__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_RIM_Client_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Card RIM/Client No</label>
    <length>18</length>
    <type>Text</type>
</CustomField>