force-app/main/default/objects/Opportunity/fields/Credit_Limit_After_Proposed_Credits__c.field-meta.xml
<CustomField>
    <fullName>Credit_Limit_After_Proposed_Credits__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Limit After Proposed Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>