force-app/main/default/objects/Opportunity/fields/Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>Credit_Report__c</fullName>
    <label>Credit Report</label>
    <summaryFilterItems>
        <field>Loan_Documents__c.Document_Type__c</field>
        <operation>equals</operation>
        <value>Credit Report</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan_Documents__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>