force-app/main/default/objects/Opportunity/fields/Credit_Risk_Rating_Prior_to_CC__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Rating_Prior_to_CC__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Risk Rating Prior to CC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>