force-app/main/default/objects/Opportunity/fields/Credit_Risk_Score_Line_of_Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Score_Line_of_Credit__c</fullName>
    <label>Credit Risk Score Line of Credit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>