force-app/main/default/objects/Opportunity/fields/Credit_Risk_Score_Unsecured_Loan__c.field-meta.xml
<CustomField>
    <fullName>Credit_Risk_Score_Unsecured_Loan__c</fullName>
    <label>Credit Risk Score Unsecured Loan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>