force-app/main/default/objects/Opportunity/fields/Credit_Score_Auto__c.field-meta.xml
<CustomField>
    <fullName>Credit_Score_Auto__c</fullName>
    <label>Credit Risk Score Auto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>